force-app/main/default/objects/OrgWideSettings__c/OrgWideSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Org-wide Settings</label>
</CustomObject>