force-app/main/default/objects/OrgWideSettings__c/fields/FastJobName__c.field-meta.xml
<CustomField>
    <fullName>FastJobName__c</fullName>
    <description>Job name used for the repeating batch job.  If it fails, you can change this name and try again.</description>
    <inlineHelpText>Job name used for the repeating batch job.  If it fails, you can change this name and try again.</inlineHelpText>
    <label>FastJobName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>