force-app/main/default/objects/OrgWideSettings__c/fields/Keep_Async_Object_Batch_Running__c.field-meta.xml
<CustomField>
    <fullName>Keep_Async_Object_Batch_Running__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Uncheck this box to pause the async jobs.  To restart them, check the box and then execute the startschedular method</description>
    <inlineHelpText>Uncheck this box to pause the async jobs.  To restart them, check the box and then execute the startschedular method</inlineHelpText>
    <label>Keep Async Object Batch Running</label>
    <type>Checkbox</type>
</CustomField>