force-app/main/default/objects/OrgWideSettings__c/fields/Keep_Nymex_Loop_Running__c.field-meta.xml
<CustomField>
    <fullName>Keep_Nymex_Loop_Running__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Keep Nymex Loop Running</label>
    <type>Checkbox</type>
</CustomField>