force-app/main/default/objects/OrgWideSettings__c/fields/Queueable_Active__c.field-meta.xml
<CustomField>
    <fullName>Queueable_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is the queueable interface running?</description>
    <inlineHelpText>is the queueable interface running?</inlineHelpText>
    <label>Queueable Active</label>
    <type>Checkbox</type>
</CustomField>