force-app/main/default/objects/OrgWideSettings__c/fields/Queueable_Process_Count__c.field-meta.xml
<CustomField>
    <fullName>Queueable_Process_Count__c</fullName>
    <description>how many asyncrequests will be processed in one queue?</description>
    <inlineHelpText>how many asyncrequests will be processed in one queue?</inlineHelpText>
    <label>Queueable Process Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>